k8s-policy-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredPolicies
metadata:
  name: deployment-must-have-security-rules
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
